# vortex

./: .gitignore  Cargo.toml  README.md  TODO.md  bors.toml
.github/: labeler.yml
.github/workflows/: devskim.yml  rust.yml
cli/: Cargo.toml
cli/src/: get_matches.rs  main.rs  run_script.rs
cli/src/cmd_run/: mod.rs
cli/src/cmd_test/: mod.rs
cli/src/init/: mod.rs
cli/src/panic_hook/: mod.rs  report.rs
cli/src/run/: mod.rs
cli/src/subcommands/: init.rs  install.rs  mod.rs  run.rs
cli/src/test/: mod.rs
display_error/: Cargo.toml
display_error/src/: lib.rs
install_npm/: Cargo.toml
install_npm/src/: lib.rs
panic_hook/: Cargo.toml
panic_hook/src/: README.md  lib.rs  report.rs
run_in_shell/: Cargo.toml
run_in_shell/src/: lib.rs
util/src/: lib.rs
validate_package_name/: Cargo.toml
validate_package_name/benches/: validate_package_name.rs
validate_package_name/src/: lib.rs
