[package]
authors = ["Skyfall <mahadkalam1234+vortex@gmail.com>"]
categories = ["command-line-utilities"]
description = "A faster package manager for Node.js"
edition = "2021"
keywords = ["js", "nodejs", "package-manager"]
license = "MIT OR Apache-2.0"
name = "vortex"
readme = "README.md"
repository = "https://github.com/SkyfallWasTaken/vortex"
version = "0.1.0"

[dependencies]
backtrace = "0.3.65"
clap = {version = "3.1.8", features = ["cargo"]}
color-eyre = "0.6.1"
common_macros = "0.1.1"
exitcode = "1.1.2"
home = "0.5.3"
inquire = "0.2.1"
json = "0.12.4"
lazy_static = "1.4.0"
node-semver = "2.0.0"
os_info = "3.3.0"
owo-colors = "3"
run_in_shell = {path = "../run_in_shell"}
run_script = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
spdx = "0.8.1"
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.9"
uuid = {version = "1.0.0", features = ["v4", "fast-rng"]}
validate_package_name = {path = "../validate_package_name"}
install_npm = {path="../install_npm"}