[package]
edition = "2021"
name = "install_npm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_macros = "0.1.1"
flate2 = "1.0.23"
lazy_static = "1.4"
node-semver = "2.0.0"
# npm supports gzip! 🥳 speeeeeeeed
reqwest = {version = "0.11", features = ["gzip", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tar = "0.4.38"
tempdir = "0.3.7"
tokio-test = "0.4.2"

[dev-dependencies]
tokio-test = "0.4"
